--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     min-height: 100vh;
     width: 100%;
     background-color: rgb(226, 201, 132);
-    color: white;
+    color: #ffffff;
 
 }
 nav{
